--- a/budget_project/budget_app/templates/budget_app/charts.html
+++ b/budget_project/budget_app/templates/budget_app/charts.html
@@ -37,6 +37,7 @@
             <li><a href="operations"><i class="material-icons">grading</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;Operacje</a></span></li>
             <li><a href="payments"><i class="material-icons">paid</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;Dochody</a></span></li>
             <li><a href="charts"><i class="material-icons">stacked_bar_chart</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;Wykresy</span></a></li>
+            <li><a href="calendar"><i class="material-icons">calendar_view_month</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;Kalendarz</span></a></li>
             <li><a href="#"><i class="material-icons">article</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;Raporty</span></a></li>
             <li><a href="settings"><i class="material-icons">settings</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;Ustawienia</span></a></li>
         </ul>
