--- a/budget_project/budget_app/templates/budget_app/calendar.html
+++ b/budget_project/budget_app/templates/budget_app/calendar.html
@@ -34,14 +34,14 @@
 
     <div id="mySidebar" class="sidebar" onmouseover="toggleSidebar()" onmouseout="toggleSidebar()">
         <ul>
-            <li><a href="app"><span><i class="material-icons" style="font-size: 50px; margin-left: -8px;">paid</i><span class="icon-text" style="font-size:30px">&nbsp;&nbsp;&nbsp;&nbsp;MyMoney</span></a></li>
-            <li><a href="app"><span><i class="material-icons">dashboard</i><span class="icon-text">&nbsp;&nbsp;&nbsp;&nbsp;Pulpit</span></a></li>
-            <li><a href="operations"><i class="material-icons">grading</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;Operacje</a></span></li>
-            <li><a href="payments"><i class="material-icons">paid</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;Dochody</a></span></li>
-            <li><a href="charts"><i class="material-icons">stacked_bar_chart</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;Wykresy</span></a></li>
-            <li><a href="calendar"><i class="material-icons">calendar_view_month</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;Kalendarz</span></a></li>
-            <li><a href="raports"><i class="material-icons">article</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;Raporty</span></a></li>
-            <li><a href="settings"><i class="material-icons">settings</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;Ustawienia</span></a></li>
+            <li><a href="/app"><span><i class="material-icons" style="font-size: 50px; margin-left: -8px;">paid</i><span class="icon-text" style="font-size:30px">&nbsp;&nbsp;&nbsp;&nbsp;MyMoney</span></a></li>
+            <li><a href="/app"><span><i class="material-icons">dashboard</i><span class="icon-text">&nbsp;&nbsp;&nbsp;&nbsp;Pulpit</span></a></li>
+            <li><a href="/operations"><i class="material-icons">grading</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;Operacje</a></span></li>
+            <li><a href="/payments"><i class="material-icons">paid</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;Dochody</a></span></li>
+            <li><a href="/charts"><i class="material-icons">stacked_bar_chart</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;Wykresy</span></a></li>
+            <li><a href="/calendar"><i class="material-icons">calendar_view_month</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;Kalendarz</span></a></li>
+            <li><a href="/raports"><i class="material-icons">article</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;Raporty</span></a></li>
+            <li><a href="/settings"><i class="material-icons">settings</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;Ustawienia</span></a></li>
         </ul>
         <a href="{% url "logout" %}" class="logout"><i class="material-icons">logout</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;logout<span></a>
     </div>
