--- a/budget_project/budget_app/templates/registration/signup.html
+++ b/budget_project/budget_app/templates/registration/signup.html
@@ -56,7 +56,7 @@
 
 
                 <div class="bottom-links">
-                 <p>Don’t have account? <a href="/">Sign up</a></p>
+                 <p>I already have an account <a href="/">Sign in</a></p>
                  </div>
 
 
