--- a/budget_project/budget_app/templates/registration/signup.html
+++ b/budget_project/budget_app/templates/registration/signup.html
@@ -29,7 +29,7 @@
 
             <form method="POST" action="" class="login-form spacer" id="login-form">
             {% csrf_token %}
-                <h1>Welcome Back</h1>
+                <h1>MyMoney</h1>
                 <div class="errors">
                     <p>{{form.errors}}</p>
                 </div>
