--- a/budget_project/budget_app/templates/registration/login.html
+++ b/budget_project/budget_app/templates/registration/login.html
@@ -27,7 +27,7 @@
     </div >
   <form action="" method="post" id="login-form">
       {% csrf_token %}
-      <h1>Welcome Back</h1>
+      <h1>MyMoney</h1>
 
       {% if form.errors %}
       <p class="error" style="color:red;">Incorrect login or password</p>
