--- a/budget_project/budget_app/templates/budget_app/settings.html
+++ b/budget_project/budget_app/templates/budget_app/settings.html
@@ -15,7 +15,17 @@
         <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
         <script type='text/javascript' src="{% static 'dynamicpage.js' %}"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      <!-- Compiled and minified JavaScript -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+      <!--Let browser know website is optimized for mobile-->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <script>
+      $(document).ready(function(){
+        $('.modal').modal();
+      });
 
+      </script>
 </head>
 
 <body>
@@ -49,6 +59,14 @@
             <input placeholder='Podaj nową nazwę' name='change_name' id='change_name' type='text'>
         </form>
     </div>
+    {% block content %}
+  <h2>Upload</h2>
+  <form method="post" action='{% url "add item by img" %}' enctype="multipart/form-data">
+    {% csrf_token %}
+    <input type="file" name="document">
+    <button type="submit">Upload file</button>
+  </form>
+    {% endblock %}
 </div>
 
 </body>
