--- a/budget_project/budget_app/templates/registration/signup.html
+++ b/budget_project/budget_app/templates/registration/signup.html
@@ -33,7 +33,6 @@
                 <div class="errors">
                     <p>{{form.errors}}</p>
                 </div>
-
                 <div class="input-box">
                     {{form.username}}
                 </div>
@@ -47,19 +46,13 @@
                 </div>
                 <div class="budget_id_desc">Minimum 8 znaków
                 </div>
-
                 <div class="input-box">
                     {{form.last_name}}
                 </div>
-
-                <button type="submit" class="login-btn">Register</button>
-
-
+                <button type="submit" class="login-btn">Stwórz konto</button>
                 <div class="bottom-links">
-                 <p>I already have an account <a href="/">Sign in</a></p>
+                 <p>Mam już konto <a href="/">Zaloguj się</a></p>
                  </div>
-
-
             </form>
 
 
